@@ -63,6 +63,8 @@
 #' @param ... additional arguments passed to vegan::cca or vegan::dbrda and
 #' other internal functions.
 #' \itemize{
+#'   \item{\code{method} a dissimilarity measure to be applied in dbRDA and
+#'   possible following homogeneity test. (By default: \code{method="euclidean"})}
 #'   \item{\code{full} a logical scalar, should all the results from the
 #'   significance calculations be returned. When \code{full=FALSE}, only
 #'   summary tables are returned. (By default: \code{full=FALSE})}
@@ -108,14 +110,18 @@
 #' GlobalPatterns <- runRDA(GlobalPatterns, data ~ SampleType)
 #' plotReducedDim(GlobalPatterns,"CCA", colour_by = "SampleType")
 #' 
-#' # To scale values when using *RDA functions, use transformAssay(MARGIN = "features", 
+#' # Specify dissimilarity measure
+#' tse <- transformAssay(tse, method = "relabundance")
+#' tse <- runRDA(tse, data ~ SampleType, assay.type = "relabundance",  method = "bray")
+#' 
+#' # To scale values when using *RDA functions, use transformAssay(MARGIN = "features", ...) 
 #' tse <- GlobalPatterns
 #' tse <- transformAssay(tse, MARGIN = "features", method = "z")
 #' # Data might include taxa that do not vary. Remove those because after z-transform
 #' # their value is NA
 #' tse <- tse[ rowSums( is.na( assay(tse, "z") ) ) == 0, ]
 #' # Calculate RDA
-#' tse <- runRDA(tse, formula = data ~ SampleType, 
+#' tse <- runRDA(tse, formula = data ~ SampleType,
 #'               assay.type = "z", name = "rda_scaled", na.action = na.omit)
 #' # Plot
 #' plotReducedDim(tse,"rda_scaled", colour_by = "SampleType")
@@ -300,7 +306,7 @@ setMethod("runCCA", "SingleCellExperiment",
 )
 
 #' @importFrom vegan sppscores<-
-.calculate_rda <- function(x, formula, variables, scores, ...){
+.calculate_rda <- function(x, formula, variables, scores, method = "euclidean", ...){
     .require_package("vegan")
     #
     # Transpose and ensure that the table is in matrix format
@@ -322,10 +328,10 @@ setMethod("runCCA", "SingleCellExperiment",
         # Convert into data.frame
         variables <- as.data.frame(variables)
         # Calculate RDA with variables
-        rda <- vegan::dbrda(formula = form, data = variables, ...)
+        rda <- vegan::dbrda(formula = form, data = variables, distance = method, ...)
     } else{
         # Otherwise calculate RDA without variables
-        rda <- vegan::dbrda(formula = form, ...)
+        rda <- vegan::dbrda(formula = form, distance = method, ...)
     }
     # Get CCA
     if( !is.null(rda$CCA) ){
